# serenity

./: .gitignore  CMakeLists.txt  gdb-automap.py  gdbinit  gdbinit-clang  gdbinit-vf2  hack-mouse.py  netboot-vf2  riscv-gdb-utils.py  serenity_vm_config.json  uefi.sh  userspace-backtrace-symbolizer.py
AK/: Atomic.h  Format.cpp  IntrusiveList.h  Math.h
Base/etc/: SystemServer.ini  WindowServer.ini  shellrc
Base/res/apps/: V3DTest.af
Documentation/: RISC-V.md
Kernel/: CMakeLists.txt  KSyms.cpp
Kernel/API/: Ioctl.h  Syscall.h  V3D.h
Kernel/Arch/: PCIMSI.h  Processor.cpp  Processor.h  TrapFrame.h  init.cpp
Kernel/Arch/aarch64/: Delay.cpp  Dummy.cpp  Exceptions.cpp  IRQController.h  InterruptManagement.cpp  Interrupts.cpp  MMU.cpp  MainIdRegister.h  PSCI.cpp  PSCI.h  PageDirectory.cpp  PageDirectory.h  Panic.cpp  Processor.cpp  Processor.h  Registers.h  SMCCC.cpp  SMCCC.h  boot.S  linker.ld  pre_init.cpp
Kernel/Arch/riscv64/: ASM_wrapper.h  CPU.cpp  CPU.h  CSR.h  CurrentTime.cpp  Delay.cpp  Dummy.cpp  IRQController.h  InterruptController.cpp  InterruptController.h  InterruptManagement.cpp  InterruptManagement.h  Interrupts.cpp  MMU.cpp  PCI.cpp  PLIC.cpp  PageDirectory.cpp  PageDirectory.h  Panic.cpp  PlatformInit.h  PowerState.cpp  Processor.cpp  Processor.h  RegisterState.h  Registers.h  SBI.cpp  SBI.h  SafeMem.cpp  SmapDisabler.cpp  ThreadRegisters.h  Timer.cpp  Timer.h  TrapFrame.cpp  TrapFrame.h  boot.S  kprintf.cpp  linker.ld  pre_init.cpp  trap_handler.S
Kernel/Arch/x86_64/: DebugOutput.cpp  PageDirectory.cpp  PageDirectory.h  Processor.cpp
Kernel/Boot/: CommandLine.cpp
Kernel/Bus/PCI/: Access.cpp  Access.h  Definitions.h  Device.cpp  DeviceTreeHelpers.cpp  DeviceTreeInitializer.cpp  IDs.h
Kernel/Bus/USB/: USBDevice.cpp  USBHub.cpp  USBManagement.cpp
Kernel/Bus/VirtIO/: Definitions.h  Device.cpp
Kernel/Devices/: KCOVDevice.cpp  KCOVDevice.h
Kernel/Devices/GPU/: DisplayConnector.cpp  DisplayConnector.h  Management.cpp
Kernel/Devices/Generic/: MemoryDevice.cpp  MemoryDevice.h
Kernel/Devices/HID/: KeyboardDevice.cpp  Management.h
Kernel/Devices/Storage/: StorageManagement.cpp
Kernel/Devices/Time/: GoldfishRTC.h
Kernel/EFIPrekernel/: CMakeLists.txt  GOP.cpp  Panic.h  Relocation.cpp  init.cpp  linker.ld
Kernel/EFIPrekernel/Arch/aarch64/: Boot.cpp  MMU.cpp  boot.S
Kernel/EFIPrekernel/Arch/riscv64/: MMU.cpp  boot.S
Kernel/EFIPrekernel/Arch/x86_64/: Boot.cpp  MMU.cpp  boot.S
Kernel/EFIPrekernel/EFI/: SystemTable.h
Kernel/EFIPrekernel/EFI/Protocols/: ConsoleSupport.h  DevicePath.h  LoadedImage.h  MediaAccess.h  RISCVBootProtocol.h
Kernel/EFIPrekernel/EFI/Services/: BootServices.h
Kernel/FileSystem/: AnonymousFile.cpp  AnonymousFile.h  BlockBasedFileSystem.cpp  File.cpp  File.h  InodeFile.cpp  InodeFile.h  OpenFileDescription.cpp  OpenFileDescription.h  VirtualFileSystem.cpp
Kernel/FileSystem/DevPtsFS/: Inode.cpp
Kernel/FileSystem/Ext2FS/: FileSystem.cpp  Inode.cpp
Kernel/FileSystem/ProcFS/: ProcessExposed.cpp
Kernel/Firmware/: QEMUFwCfg.cpp  QEMUFwCfg.h
Kernel/Firmware/DeviceTree/: Device.h  DeviceTree.cpp  DeviceTree.h  DeviceTreeManagement.cpp  DeviceTreeManagement.h  Driver.h  Management.cpp  Management.h  PlatformInit.cpp
Kernel/Firmware/EFI/: EFI.h
Kernel/Firmware/QEMUFWCfg/: QEMUFWCfg.cpp  QEMUFWCfg.h  RAMFB.cpp
Kernel/Heap/: kmalloc.cpp
Kernel/Locking/: LockRank.h  Spinlock.h
Kernel/Memory/: MemoryManager.cpp  MemoryManager.h  Region.cpp  Region.h  RegionTree.cpp
Kernel/Net/: NetworkTask.cpp  NetworkingManagement.cpp  NetworkingManagement.h
Kernel/Net/ASIX/: AX88772NetworkAdapter.cpp  AX88772NetworkAdapter.h
Kernel/Prekernel/: CMakeLists.txt  Prekernel.h  multiboot.S
Kernel/Security/: Random.cpp
Kernel/Syscalls/: SyscallHandler.cpp  execve.cpp  fork.cpp  mmap.cpp  ptrace.cpp  thread.cpp  uname.cpp
Kernel/Tasks/: CrashHandler.cpp  PerformanceEventBuffer.cpp  Process.cpp  Scheduler.cpp  Thread.cpp  Thread.h  WaitQueue.cpp  WaitQueue.h
Kernel/Time/: HardwareTimer.h  TimeManagement.cpp  TimeManagement.h  TimerQueue.cpp
Meta/: build-image-grub-uefi.sh  build-image-grub.sh  build-image-qemu.sh  build-root-filesystem.sh  grub-gpt.cfg  grub-mbr.cfg  run.py  run.sh  serenity.sh  serenity_gdb.py
Meta/CMake/: all_the_debug_macros.cmake  common_compile_options.cmake  serenity_compile_options.cmake
Meta/Lagom/: CMakeLists.txt
Ports/: .hosted_defs.sh  AvailablePorts.md
Ports/binutils/: package.sh
Ports/ncurses/: package.sh
Tests/Kernel/: CMakeLists.txt
Tests/LibC/: CMakeLists.txt  TestFenv.cpp
Tests/LibHID/: CMakeLists.txt  TestParseReportDescriptor.cpp
Toolchain/: BuildGNU.sh
Toolchain/CMake/: GNUToolchain.txt.in
Toolchain/Patches/binutils/: 0001-Add-support-for-SerenityOS.patch  0002-ld-Add-Bsymbolic-non-weak-functions.patch
Toolchain/Patches/gcc/: 0001-Add-a-gcc-driver-for-SerenityOS.patch  0003-libgcc-Build-for-SerenityOS.patch  0007-libatomic-Build-for-SerenityOS.patch
Userland/: CMakeLists.txt
Userland/Applications/CrashReporter/: main.cpp
Userland/Applications/Debugger/: main.cpp
Userland/Demos/: CMakeLists.txt
Userland/Demos/V3DTest/: Buffer.cpp  Buffer.h  CMakeLists.txt  ClearColor.cpp  ClearColor.h  Job.h  Makefile  Triangle.cpp  main.cpp
Userland/DevTools/Profiler/: Profile.cpp
Userland/DynamicLoader/: CMakeLists.txt  main.cpp
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibC/: CMakeLists.txt  Dummy.S  crt0.cpp  fenv.cpp  math.cpp  setjmp.h  stdlib.cpp
Userland/Libraries/LibCoredump/: Backtrace.cpp
Userland/Libraries/LibDebug/: DebugInfo.cpp  DebugSession.cpp
Userland/Libraries/LibDeviceTree/: DeviceTree.cpp  DeviceTree.h
Userland/Libraries/LibELF/: DynamicLinker.cpp  DynamicLoader.cpp  DynamicObject.cpp  ELFABI.h  Image.h  Relocation.cpp  (+2 more)
Userland/Utilities/: functrace.cpp  strace.cpp
gdb/: gdbinit-vf2  riscv_gdb_utils.py  serenity_riscv_unwinder.py
netboot/: Kernel.efi  boot.scr  boot.scr.uimg
openocd/: adafruit-ft232h.cfg  jh7110.cfg  spike.cfg
serenity-vm/: Android.bp  build.sh  main.cpp  serenity-framebuffer-overlay.dts
(+96 files in other folders)
